syntax = "proto3";
option go_package = "./generated";

import "google/api/annotations.proto";
import "validate/validate.proto";

service AuthorizationService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
}

message RegisterRequest {
  string username = 1 [
    (validate.rules).string.email = true
  ];
  string password = 2 [
    (validate.rules).string.min_len = 10,
    (validate.rules).string.max_len = 25,
    (validate.rules).string.max_bytes = 70 // under bcrypt limit
  ];
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}