syntax = "proto3";
option go_package = "./generated";

import "google/api/annotations.proto";

service ExerciseService {
  rpc GetExercises(GetExercisesRequest) returns (GetExercisesResponse) {
    option (google.api.http) = {
      get: "/v1/exercises"
    };
  }
}

service WorkoutService {
  rpc CreateWorkout(CreateWorkoutRequest) returns (CreateWorkoutResponse) {
    option (google.api.http) = {
      post: "/v1/workouts"
      body: "*"
    };
  }
  rpc UpdateWorkoutExercise(UpdateWorkoutRequest) returns (UpdateWorkoutResponse) {
    option (google.api.http) = {
      put: "/v1/workouts/{workout_id}/exercises/{exercise_id}"
      body: "*"
    };
  }
}

message GetExercisesRequest {
  optional string muscle_group_filter = 1;
  optional string category_filter = 2;
}

message GetExercisesResponse {
  repeated Exercise exercises = 1;
}

message Exercise {
  string id = 1;
  string name = 2;
  string description = 3;
  string muscle_group = 4;
  string category = 5;
}

message CreateWorkoutRequest {
  string name = 1;
  repeated WorkoutExercise exercises = 2;
}

message WorkoutExercise {
  string exercise_id = 1;
  int32 order = 2;
  int32 repetitions = 3;
  int32 sets = 4;
  optional int32 weight = 5;
}

message CreateWorkoutResponse {
  string id = 1;
}

message UpdateWorkoutRequest {
  string workout_id = 1;
  string exercise_id = 2;
  int32 order = 3;
  int32 repetitions = 4;
  int32 sets = 5;
  optional int32 weight = 6;
}

message UpdateWorkoutResponse {}